tests/baselines/reference/logicalAssignment7(target=esnext).errors.txt
tests/cases/conformance/esnext/logicalAssignment/logicalAssignment7.ts(2,6): error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
tests/cases/conformance/esnext/logicalAssignment/logicalAssignment7.ts(6,6): error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
tests/cases/conformance/esnext/logicalAssignment/logicalAssignment7.ts(10,5): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/esnext/logicalAssignment/logicalAssignment7.ts(10,6): error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
tests/cases/conformance/esnext/logicalAssignment/logicalAssignment7.ts(10,40): error TS2345: Argument of type '100' is not assignable to parameter of type 'never'.


==== tests/cases/conformance/esnext/logicalAssignment/logicalAssignment7.ts (5 errors) ====
    function foo1(results: number[] | undefined, results1: number[] | undefined) {
        (results ||= results1 ||= []).push(100);
         ~~~~~~~~~~~~~~~~~~~~
!!! error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
    }
    
    function foo2(results: number[] | undefined, results1: number[] | undefined) {
        (results ??= results1 ??= []).push(100);
         ~~~~~~~~~~~~~~~~~~~~
!!! error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
    }
    
    function foo3(results: number[] | undefined, results1: number[] | undefined) {
        (results &&= results1 &&= []).push(100);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
         ~~~~~~~~~~~~~~~~~~~~
!!! error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
                                           ~~~
!!! error TS2345: Argument of type '100' is not assignable to parameter of type 'never'.
    }